--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,32 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 *.swp
 package-lock.json
 __pycache__
+.pyc
 .pytest_cache
 .env
-.venv
 *.egg-info
 
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+.venv/
+venv/
+
+.idea/
+**/.DS_Store
+.DS_Store
